--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -316,9 +316,14 @@
   id="api-keys"
   class="max-w-2xl px-8 pt-6 pb-8 mx-auto mt-16 bg-white border-t-2 border-indigo-100 rounded rounded-t-none shadow-md dark:bg-gray-800 dark:border-indigo-500"
 >
-  <h2 class="text-xl font-black dark:text-gray-100">API keys</h2>
-
+  <h2 class="text-xl font-black dark:text-gray-100">API Keys</h2>
   <div class="my-4 border-b border-gray-300 dark:border-gray-500"></div>
+
+  <PlausibleWeb.Components.Billing.extra_feature_notice
+    billable_user={@current_user}
+    current_user={@current_user}
+    feature_mod={Plausible.Billing.Feature.StatsAPI}
+  />
 
   <div class="flex flex-col mt-6">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
@@ -370,7 +375,13 @@
           </div>
         <% end %>
 
-        <%= link("+ New API key", to: "/settings/api-keys/new", class: "button mt-4") %>
+        <.link
+          :if={Plausible.Billing.Feature.StatsAPI.check_availability(@current_user) == :ok}
+          href={Routes.auth_path(@conn, :new_api_key)}
+          class="button mt-4"
+        >
+          + New API Key
+        </.link>
       </div>
     </div>
   </div>
@@ -388,7 +399,7 @@
   </p>
 
   <%= if @subscription && @subscription.status == Plausible.Billing.Subscription.Status.active() do %>
-    <span class="mt-6 bg-gray-300 button dark:bg-gray-600 hover:shadow-none hover:bg-gray-300">
+    <span class="mt-6 bg-gray-300 button dark:bg-gray-600 hover:shadow-none hover:bg-gray-300 cursor-not-allowed">
       Delete my account
     </span>
     <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
