--- a/lib/plausible_web/templates/site/settings_people.html.eex
+++ b/lib/plausible_web/templates/site/settings_people.html.eex
@@ -12,7 +12,7 @@
         <li class="py-4">
           <div class="flex items-center space-x-4">
             <div class="flex-shrink-0">
-              <%= gravatar(membership.user.email, class: "h-8 w-8 rounded-full") %>
+              <%= img_tag(Plausible.Auth.User.profile_img_url(membership.user), class: "h-8 w-8 rounded-full") %>
             </div>
             <div class="flex-1 min-w-0">
               <p class="text-sm font-medium text-gray-900 dark:text-gray-50 truncate">
