Refactor: Add 'goals' feature to JSON plan files (#3435)
* fix text color in dark mode

* rename a function

* use aliases in quota.ex

* rename a function

* make Goals a similar feature to others but with a free option

* rename a function

* mix format

--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -319,7 +319,7 @@
   <h2 class="text-xl font-black dark:text-gray-100">API Keys</h2>
   <div class="my-4 border-b border-gray-300 dark:border-gray-500"></div>
 
-  <PlausibleWeb.Components.Billing.extra_feature_notice
+  <PlausibleWeb.Components.Billing.premium_feature_notice
     billable_user={@current_user}
     current_user={@current_user}
     feature_mod={Plausible.Billing.Feature.StatsAPI}
