--- a/lib/plausible_web/templates/site/settings_props.html.heex
+++ b/lib/plausible_web/templates/site/settings_props.html.heex
@@ -7,7 +7,7 @@
   />
 
   <div class="py-6 px-4 sm:p-6">
-    <header class="w-full flex">
+    <header class="w-full flex relative">
       <span class="flex-1">
         <h1 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100">
           Custom Properties
@@ -23,25 +23,7 @@
         </p>
       </span>
 
-      <.link
-        href="https://plausible.io/docs/custom-props/introduction"
-        target="_blank"
-        rel="noreferrer"
-      >
-        <svg
-          class="w-6 h-6 text-gray-400"
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
-            clip-rule="evenodd"
-          >
-          </path>
-        </svg>
-      </.link>
+      <PlausibleWeb.Components.Generic.docs_info slug="custom-props/introduction" />
     </header>
 
     <PlausibleWeb.Components.Site.Feature.toggle
