--- a/lib/plausible_web/templates/email/site_setup_success_email.html.eex
+++ b/lib/plausible_web/templates/email/site_setup_success_email.html.eex
@@ -1,11 +1,13 @@
-Congrats! The Plausible script has been installed correctly on <%= link(@site.domain, to: "https://#{@site.domain}") %>. Your website traffic is now being tracked without compromising the user experience and the privacy of your visitors.
+Congrats! We've recorded the first visitor on <%= link(@site.domain, to: "https://#{@site.domain}") %>. Your traffic is now being counted without compromising the user experience and privacy of your visitors.
 <br /><br />
-<%= link("Check your stats", to: "#{plausible_url()}/#{URI.encode_www_form(@site.domain)}") %>
+Do check out your <%= link("easy to use, fast-loading and privacy-friendly dashboard", to: "#{plausible_url()}/#{URI.encode_www_form(@site.domain)}") %>.
+<br /><br />
+Something looks off? Take a look at our <%= link("installation troubleshooting guide", to: "https://plausible.io/docs/troubleshoot-integration") %>.
 <br /><br />
 <%= if Plausible.Billing.on_trial?(@user) do %>
-  You're on a 30-day free trial with no obligations so do take your time to explore your simple and privacy-friendly website analytics dashboard.
+  You're on a 30-day free trial with no obligations so do take your time to explore Plausible. Here's how to get <%= link("the most out of your Plausible experience", to: "https://plausible.io/docs/your-plausible-experience") %>. 
   <br /><br />
 <% end %>
 PS: You can import your historical Google Analytics (Universal Analytics) stats into your Plausible dashboard. <%= link("Learn how our GA importer works", to: "https://plausible.io/docs/google-analytics-import") %>.
 <br /><br />
-Do reply back to this email if you have any questions.
+Do reply back to this email if you have any questions. We're here to help.
