Simplify asset building (#3459)
* Add tailwind and esbuild

* Remove unused images

* Move unprocessed assets to priv directory

* Fix applyTheme script

* Remove autoprefixer

* Update bundlemon

* Remove babel config

* Revert "Remove autoprefixer"

This reverts commit fc60c31c739145f3ba5f1224e20793be20faf1f9.

* Make dashboard react file work

* Fix app.css imports

* Remove autoprefixer

* Add back in robots.txt

* Go back to css/ and js/ folders as opposed to assets/

* Bundle embed.host.js and embed.content.js

* Add components folder to live reload paths

* Remove bundlemon

* Use mix assets task in Dockerfil

* Add assets setup to CONTRIBUTING.md

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,12 +1,11 @@
-/* purgecss start ignore */
-@tailwind base;
-@tailwind components;
-
-/* purgecss end ignore */
-@import "modal.css";
-@import "loader.css";
-@import "tooltip.css";
-@import "flatpickr.css";
+@import "tailwindcss/base";
+@import "flatpickr/dist/flatpickr.min.css";
+@import "./modal.css";
+@import "./loader.css";
+@import "./tooltip.css";
+@import "./flatpickr.css";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 [x-cloak] { display: none; }
 
@@ -64,8 +63,6 @@ blockquote {
     height: auto;
   }
 }
-
-@tailwind utilities;
 
 
 .light-text {
