Extract button component (#3474)
* Add button component

* Use new button in settings screen

* Use button component in registration screens

* Use new button component for Billing.upgrade_link

* Separate .button and .button_link

* Add attr definiton for disabled

* Fix funnels test

--- a/lib/plausible_web/templates/site/change_domain.html.heex
+++ b/lib/plausible_web/templates/site/change_domain.html.heex
@@ -31,7 +31,9 @@
       for details.
     </p>
 
-    <%= submit("Change Domain and add new Snippet →", class: "button mt-4 w-full") %>
+    <PlausibleWeb.Components.Generic.button type="submit" class="mt-4 w-full">
+      Change Domain and add new Snippet →
+    </PlausibleWeb.Components.Generic.button>
 
     <div class="text-center mt-4">
       <.styled_link
