--- a/lib/plausible_web/templates/site/settings_people.html.heex
+++ b/lib/plausible_web/templates/site/settings_people.html.heex
@@ -226,17 +226,10 @@
   </div>
 
   <div class="mt-8">
-    <%= link(to: Routes.membership_path(@conn, :invite_member_form, @site.domain), class: "button") do %>
-      <svg
-        class="w-5 h-5 mr-1"
-        fill="currentColor"
-        viewBox="0 0 20 20"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z">
-        </path>
-      </svg>
-      Invite
-    <% end %>
+    <PlausibleWeb.Components.Generic.button_link href={
+      Routes.membership_path(@conn, :invite_member_form, @site.domain)
+    }>
+      <Heroicons.user_plus solid class="w-5 h-5" /> Invite
+    </PlausibleWeb.Components.Generic.button_link>
   </div>
 </div>
