--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -232,7 +232,10 @@
           "dark:bg-gray-900  mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 dark:border-gray-500 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md dark:text-gray-100 cursor-pointer"
       ) %>
     </div>
-    <%= submit("Save", class: "button mt-4") %>
+
+    <PlausibleWeb.Components.Generic.button type="submit" class="mt-4">
+      Save
+    </PlausibleWeb.Components.Generic.button>
   <% end %>
 </div>
 
@@ -254,7 +257,9 @@
         <%= error_tag(f, :name) %>
       </div>
     </div>
-    <%= submit("Save", class: "button mt-4") %>
+    <PlausibleWeb.Components.Generic.button type="submit" class="mt-4">
+      Save
+    </PlausibleWeb.Components.Generic.button>
   <% end %>
 </div>
 
@@ -375,13 +380,13 @@
           </div>
         <% end %>
 
-        <.link
+        <PlausibleWeb.Components.Generic.button_link
           :if={Plausible.Billing.Feature.StatsAPI.check_availability(@current_user) == :ok}
           href={Routes.auth_path(@conn, :new_api_key)}
-          class="button mt-4"
+          class="mt-4"
         >
           + New API Key
-        </.link>
+        </PlausibleWeb.Components.Generic.button_link>
       </div>
     </div>
   </div>
