--- a/lib/plausible_web/templates/email/yearly_expiration_notification.html.eex
+++ b/lib/plausible_web/templates/email/yearly_expiration_notification.html.eex
@@ -1,6 +1,6 @@
 Time flies! This is a reminder that your annual subscription for Plausible Analytics will expire on <%= @date %>.
 <br /><br />
-You need to renew your subscription on <%= link("account settings page", to: "#{plausible_url()}/billing/upgrade") %> if you want to continue using Plausible to count your website stats in a privacy-friendly way.
+You need to <%= link("renew your subscription", to: plausible_url() <> Plausible.Billing.upgrade_route_for(@user)) %> if you want to continue using Plausible to count your website stats in a privacy-friendly way.
 <br /><br />
 If you don't want to continue your subscription, there's no action required. You will lose access to the stats on <%= @date %>.
 <br /><br />
