Fixing Business Tier related bugs (#3504)
* fix underlined blank space in upgrade link

* Add :if clause to site limit notice

* Change test description

* Move growth? and trial? conditionals to CTA function

* Improve wording in billing notices

---------

Co-authored-by: Vinicius Brasil <vini@hey.com>

--- a/lib/plausible_web/templates/site/new.html.heex
+++ b/lib/plausible_web/templates/site/new.html.heex
@@ -3,6 +3,7 @@
     <h2 class="text-xl font-black dark:text-gray-100 mb-4">Your website details</h2>
 
     <PlausibleWeb.Components.Billing.limit_exceeded_notice
+      :if={Map.get(assigns, :is_at_limit, false)}
       current_user={@current_user}
       billable_user={@current_user}
       limit={Map.get(assigns, :site_limit, 0)}
