Notice across the app about Funnels and Revenue goals private preview end (#3510)
* change upgrade CTA notice message for enterprise and business plans

* add dismissable option to Generic.notice

* more general notice about losing premium features in X days

* save notice dismissed per user

... more than one Plausible account can use the same device, so we should
scope the fact that the notice has been dismissed by user id.

* fix bug applying classes to Generic.notice

* apply shadow to the new notice on light mode

* use Heroicons.x_mark instead of raw SVG

* use Enum.filter instead of list comprehension

--- a/lib/plausible_web/templates/layout/_notice.html.heex
+++ b/lib/plausible_web/templates/layout/_notice.html.heex
@@ -95,12 +95,16 @@
   </div>
 <% end %>
 
-<.subscription_past_due_notice
-  subscription={@conn.assigns[:current_user] && @conn.assigns[:current_user].subscription}
-  class="container"
-/>
+<%= if @conn.assigns[:current_user] do %>
+  <.subscription_past_due_notice
+    subscription={@conn.assigns.current_user.subscription}
+    class="container"
+  />
 
-<.subscription_paused_notice
-  subscription={@conn.assigns[:current_user] && @conn.assigns[:current_user].subscription}
-  class="container"
-/>
+  <.subscription_paused_notice
+    subscription={@conn.assigns.current_user.subscription}
+    class="container"
+  />
+
+  <.private_preview_end_notice user={@conn.assigns.current_user} />
+<% end %>
