Limit grandfathering to *active* subscribers and trials (#3524)
* refactor asserting plan generation in plans_test.exs

* stop grandfathering old expired trials

For users who registered before the business tiers release, we want to
offer a chance to subscribe to a grandfathered plan. However, if they
let their trial expire and don't subscribe in the next 10 days, they'll
lose that opportunity.

* stop grandfathering expired subscriptions

* remove default title and icon from Generic.notice

* fix bug with dismissable notice

classList is null when dismissable_id is not given

* alias Plausible.Auth.User

* Refactor Generic.notice component

Make it easy to apply different colors

* move subscription_cancelled_notice across the app

And remove from user settings > subscription box. Also, include a note
about losing grandfathered status when letting the subscription expire.

* allow full width in Generic.notice

* use Generic.notice for subscription_past_due_notice

* use Generic.notice for subscription_paused_notice

* prevent two notices clashing into each other with gap-y-2

* define attrs for phx components

* optimize for light mode

* make subscription cancelled notice dismissable

but if it's dismiss, show it in the place where it was before in the
account settings > subscription box

* make function private

* replace function doc with regular comment to avoid compile warning

* use array for classnames

Co-authored-by: Vinicius Brasil <vini@hey.com>

* fix typos in function doc

---------

Co-authored-by: Vinicius Brasil <vini@hey.com>

--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -25,41 +25,10 @@
 
     <div class="my-4 border-b border-gray-400"></div>
 
-    <div
-      :if={
-        @subscription && @subscription.status == Plausible.Billing.Subscription.Status.deleted()
-      }
-      class="p-2 bg-red-100 rounded-lg sm:p-3"
-    >
-      <div class="flex flex-wrap items-center justify-between">
-        <div class="flex items-center flex-1 w-0">
-          <svg
-            class="w-6 h-6 text-red-800"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M12 9V11M12 15H12.01M5.07183 19H18.9282C20.4678 19 21.4301 17.3333 20.6603 16L13.7321 4C12.9623 2.66667 11.0378 2.66667 10.268 4L3.33978 16C2.56998 17.3333 3.53223 19 5.07183 19Z"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-          <p class="ml-3 font-medium text-red-800">
-            <%= if @subscription.next_bill_date && Timex.compare(@subscription.next_bill_date, Timex.today()) >= 0 do %>
-              Your subscription is cancelled but you have access to your stats until <%= Timex.format!(
-                @subscription.next_bill_date,
-                "{Mshort} {D}, {YYYY}"
-              ) %>. Upgrade below to make sure you don't lose access.
-            <% else %>
-              Your subscription is cancelled. Upgrade below to get access to your stats again.
-            <% end %>
-          </p>
-        </div>
-      </div>
-    </div>
+    <PlausibleWeb.Components.Billing.subscription_cancelled_notice
+      user={@user}
+      dismissable={false}
+    />
 
     <div class="flex flex-col items-center justify-between mt-8 sm:flex-row sm:items-start">
       <PlausibleWeb.Components.Billing.monthly_quota_box
