Keeping footers consistent

--- a/lib/plausible_web/templates/layout/_footer.html.eex
+++ b/lib/plausible_web/templates/layout/_footer.html.eex
@@ -172,6 +172,11 @@
                 </a>
               </li>
               <li class="mt-4">
+                <a rel="noreferrer" href="https://plausible.io/security" class="text-base leading-6 text-gray-300 hover:text-white">
+                  Security
+                </a>
+              </li>
+              <li class="mt-4">
                 <a rel="noreferrer" href="https://plausible.io/imprint" class="text-base leading-6 text-gray-300 hover:text-white">
                   Imprint
                 </a>
