Remove custom domains support + update build options (#3559)
* Disable super-admin checks on small build

* Mute a test writing to stdout

* Move sampling outside of small build

* Convert waiting_first_pageview to heex and stop relying on env vars

* Set site limit unlimited on small build

* Stop relying on app env to get trial expiry

* Remove custom domains - including migration

* Remove is_selfhosted from layout view

* Quota fixup

* Stop relying on app env for self hosted registration

* Stop relying on app env for pass reset success

* Apply on_trial? check only on full build

* Update templates relying on app env

* Adjusts auth controller tests for small build

* Trial fixup

* Fixup

* Stop relying on app env

* Rest of the fsckn owl

* Update typespecs

* Fix dialyzer warning

* Remove unused module

* Credo + format

* GeoIP is not, for full build

* Use `small_build?()` where applicable

* Implement bypassing FirstLaunchPlug without insertions

* Get Marko's patch https://github.com/plausible/analytics/commit/09213f700871a3f04a515f8417826332f85e3bed

* Test is-dbip=false presence

* Fix typespec

* Remove future hardcodes

* Handle `nil` from `Plausible.Geo.database_type()`

* Remove XXX marker

* Use one typespec for two clauses

* Introduce `MIX_ENV=small_dev`

* Revert "Use one typespec for two clauses"

This reverts commit 8d8cd21764a9d63f12bb9ebe0d6678759aee09bb.

--- a/lib/plausible_web/templates/email/google_analytics_import.html.heex
+++ b/lib/plausible_web/templates/email/google_analytics_import.html.heex
@@ -1,19 +1,16 @@
 <%= if @success do %>
-  Your Google Analytics import has completed successfully. The Plausible dashboard for <%= @site.domain %> now contains historical imported data from <%= date_format(@site.imported_data.start_date) %> to <%= date_format(@site.imported_data.end_date) %>
-<br /><br />
-<%= link("Click here", to: @link) %> to view your dashboard.
+  Your Google Analytics import has completed successfully. The Plausible dashboard for <%= @site.domain %> now contains historical imported data from <%= date_format(
+    @site.imported_data.start_date
+  ) %> to <%= date_format(@site.imported_data.end_date) %>
+  <br /><br />
+  <%= link("Click here", to: @link) %> to view your dashboard.
 <% else %>
   Unfortunately, your Google Analytics import for <%= @site.domain %> did not complete successfully. Sorry about that!
   <br /> <br />
-
   This may be due to the user metric setting in your Google Analytics account. We found that changing the user metric setting is necessary to get the correct data out of the Google API.
   <br /> <br />
-
   Please log into your Google Analytics account and go to Admin -> Property Settings -> User Analysis. Then make sure that "Enable User Metric in Reporting" is set to OFF. Then try importing again. You can switch the setting back after the import.
-  <br /> <br />
-
-  If you've already changed that setting, then it is something else:
-  <br />
+  <br /> <br /> If you've already changed that setting, then it is something else: <br />
 
   <ul>
     <li>
@@ -24,10 +21,8 @@
     </li>
   </ul>
   <br />
-
   If all of the above is fine, please try to do the import once again. Sometimes the Google Analytics API just randomly returns empty data. It's intermittent and random. Trying to do the import again may return what you need.
-
-  <%= if !Application.get_env(:plausible, :is_selfhost) do %>
+  <%= if full_build?() do %>
     <br /> <br />
     Please reply to this email to let us know if you're still experiencing issues with the import.
   <% end %>
