Define a better monthly pageview usage (#3564)
* refactor asking for the monthly pageview usage

* add tests for usage and limits section in account settings

* display pageview usage per billing cycle for active subscribers

* disable cycle tabs if no usage

* make current billing cycle whole

...instead of capping it at today's date

* run queries for different cycles concurrently

* fix linebreak bug

* add calculate usage action into CRM

* change some names of assigns

* block subscribing to a plan by pageview usage

Depending on whether the customer has already subscribed or not, checking
their pageview usage is different:

* If they're not subscribed yet, we allow them to subscribe to a plan If
  it their last 30 days usage does not exceed the plan pageview limit by
  more than 15% (30% for when subscribing to a 10k plan)

* For existing subscribers, we'll use the exact same mechanism that we're
  using for locking sites - the last two billing cycles usage. If both
  cycles exceed the plan limit by more than 10% - we don't allow them to
  subscribe to the plan

* apply credo suggestion

* prevent highlight bar overflow

* move disabled classes to button element

* optimize for darkmode

* unify link and text styling on the same horizontal line

'Upgrade' & 'Update billing details' links + billing interval text were
positioned on the same line. The font size was similar, but not the same

* improve exceeded_limits function readability

* Refactor some tests and remove code duplication

* override allow upgrade when limits exceeded

In cases where limits are exceeded, we can set the boolean flag
`allow_next_upgrade_override` to `true` in the CRM. This will allow
the user to upgrade to any plan they want. After they've upgraded or
changed their plan - the flag will automatically reset to `false`.

* only apply upgrade override for exceeded pageview limit

* fix tests on the CI

* make current_cycle us

--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -45,12 +45,9 @@
           <div class="py-2 text-xl font-medium dark:text-gray-100">
             <%= PlausibleWeb.BillingView.present_currency(@subscription.currency_code) %><%= @subscription.next_bill_amount %>
           </div>
-          <%= if @subscription.update_url do %>
-            <%= link("Update billing info",
-              to: @subscription.update_url,
-              class: "text-sm text-indigo-500 font-medium"
-            ) %>
-          <% end %>
+          <.styled_link :if={@subscription.update_url} href={@subscription.update_url}>
+            Update billing info
+          </.styled_link>
         <% else %>
           <div class="py-2 text-xl font-medium dark:text-gray-100">---</div>
         <% end %>
@@ -65,44 +62,31 @@
           <div class="py-2 text-xl font-medium dark:text-gray-100">
             <%= Timex.format!(@subscription.next_bill_date, "{Mshort} {D}, {YYYY}") %>
           </div>
-          <div class="text-sm font-medium text-gray-600 dark:text-gray-400">
+          <span class="text-gray-600 dark:text-gray-400">
             (<%= subscription_interval(@subscription) %> billing)
-          </div>
+          </span>
         <% else %>
           <div class="py-2 text-xl font-medium dark:text-gray-100">---</div>
         <% end %>
       </div>
     </div>
 
+    <PlausibleWeb.Components.Billing.render_monthly_pageview_usage
+      usage={@pageview_usage}
+      limit={@pageview_limit}
+    />
+
     <article class="mt-8">
-      <h1 class="text-xl font-bold dark:text-gray-100">Usage & Limits</h1>
-      <h2 class="mt-1 mb-3 text-sm text-gray-500 leading-5 dark:text-gray-200">
-        Your usage across all of your sites and the limits of your plan
-      </h2>
+      <h1 class="text-xl mb-3 font-bold dark:text-gray-100">Sites & team members usage</h1>
       <PlausibleWeb.Components.Billing.usage_and_limits_table>
         <PlausibleWeb.Components.Billing.usage_and_limits_row
-          title="Total billable pageviews (last 30 days)"
-          usage={@total_pageview_usage}
-          limit={@total_pageview_limit}
-        />
-        <PlausibleWeb.Components.Billing.usage_and_limits_row
-          pad
-          title="Pageviews"
-          usage={@pageview_usage}
-          class="font-normal text-gray-500 dark:text-gray-400"
-        />
-        <PlausibleWeb.Components.Billing.usage_and_limits_row
-          pad
-          title="Custom events"
-          usage={@custom_event_usage}
-          class="font-normal text-gray-500 dark:text-gray-400"
-        />
-        <PlausibleWeb.Components.Billing.usage_and_limits_row
+          id="site-usage-row"
           title="Owned sites"
           usage={@site_usage}
           limit={@site_limit}
         />
         <PlausibleWeb.Components.Billing.usage_and_limits_row
+          id="team-member-usage-row"
           title="Team members"
           usage={@team_member_usage}
           limit={@team_member_limit}
