--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -193,10 +193,7 @@
     <% end %>
   </div>
 
-  <div
-    :if={FunWithFlags.enabled?(:two_factor, for: @user)}
-    class="max-w-2xl px-8 pt-6 pb-8 mx-auto mt-16 bg-white border-t-2 border-green-500 rounded rounded-t-none shadow-md dark:bg-gray-800"
-  >
+  <div class="max-w-2xl px-8 pt-6 pb-8 mx-auto mt-16 bg-white border-t-2 border-green-500 rounded rounded-t-none shadow-md dark:bg-gray-800">
     <h2 id="setup-2fa" class="text-xl font-black dark:text-gray-100">
       Two-Factor Authentication (2FA)
     </h2>
@@ -420,7 +417,6 @@
 
   <PlausibleWeb.Components.TwoFactor.modal
     :let={f}
-    :if={FunWithFlags.enabled?(:two_factor, for: @user)}
     id="disable-2fa-modal"
     state_param="disable2FAOpen"
     form_data={@conn.params}
@@ -457,7 +453,6 @@
 
   <PlausibleWeb.Components.TwoFactor.modal
     :let={f}
-    :if={FunWithFlags.enabled?(:two_factor, for: @user)}
     id="regenerate-2fa-modal"
     state_param="regenerate2FAOpen"
     form_data={@conn.params}
