--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -42,7 +42,7 @@
           style="width: 11.75rem;"
         >
           <h4 class="font-black dark:text-gray-100">Next bill amount</h4>
-          <%= if @subscription && @subscription.status in [Plausible.Billing.Subscription.Status.active(), Plausible.Billing.Subscription.Status.past_due()] do %>
+          <%= if Plausible.Billing.Subscription.Status.in?(@subscription, [Plausible.Billing.Subscription.Status.active(), Plausible.Billing.Subscription.Status.past_due()]) do %>
             <div class="py-2 text-xl font-medium dark:text-gray-100">
               <%= PlausibleWeb.BillingView.present_currency(@subscription.currency_code) %><%= @subscription.next_bill_amount %>
             </div>
@@ -59,7 +59,7 @@
         >
           <h4 class="font-black dark:text-gray-100">Next bill date</h4>
 
-          <%= if @subscription && @subscription.next_bill_date && @subscription.status in [Plausible.Billing.Subscription.Status.active(), Plausible.Billing.Subscription.Status.past_due()] do %>
+          <%= if @subscription && @subscription.next_bill_date && Plausible.Billing.Subscription.Status.in?(@subscription, [Plausible.Billing.Subscription.Status.active(), Plausible.Billing.Subscription.Status.past_due()]) do %>
             <div class="py-2 text-xl font-medium dark:text-gray-100">
               <%= Timex.format!(@subscription.next_bill_date, "{Mshort} {D}, {YYYY}") %>
             </div>
@@ -394,7 +394,7 @@
       Deleting your account removes all sites and stats you've collected
     </p>
 
-    <%= if @subscription && @subscription.status == Plausible.Billing.Subscription.Status.active() do %>
+    <%= if Plausible.Billing.Subscription.Status.active?(@subscription) do %>
       <span class="mt-6 bg-gray-300 button dark:bg-gray-600 hover:shadow-none hover:bg-gray-300 cursor-not-allowed">
         Delete my account
       </span>
