Remove business tier feature flag (#3632)
* Remove business tier feature flag

This commit removes all code branches related to the business tier
feature flag, as we're not flipping this flag off anymore. It also
removes unused routes, e.g. /billing/change-plan and /billing/upgrade

* remove unused billing templates

* refactor with clause to case instead

* assert on the url in email tests

---------

Co-authored-by: Robert Joonas <robertjoonas16@gmail.com>

--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -35,7 +35,6 @@
         <PlausibleWeb.Components.Billing.monthly_quota_box
           user={@user}
           subscription={@subscription}
-          business_tier={FunWithFlags.enabled?(:business_tier, for: @user)}
         />
         <div
           class="h-32 px-2 py-4 my-4 text-center bg-gray-100 rounded dark:bg-gray-900"
@@ -106,10 +105,7 @@
           </div>
         <% true -> %>
           <div class="mt-8">
-            <PlausibleWeb.Components.Billing.upgrade_link
-              user={@user}
-              business_tier={FunWithFlags.enabled?(:business_tier, for: @user)}
-            />
+            <PlausibleWeb.Components.Billing.upgrade_link user={@user} />
           </div>
       <% end %>
     </div>
